# patchwork-generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patchwork-generator.pro  patchworkview.cpp  patchworkview.h
include/: patchworkview.h
src/: patchworkview.cpp
